# dj-importmap

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml
dj_importmap/: asgi.py  importmaps.py  settings.py  wsgi.py
dj_importmap/testapp/: apps.py  importmaps.py  tests.py
importmap/: __init__.py  apps.py  base.py  context_processors.py
importmap/templatetags/: importmap.py
