[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-importmap"
dynamic = ["version"]
description = "Integrate HTML importmaps with Django for modern web development"
readme = "README.md"
license = { file = "LICENSE" }

authors = [
    { name = "Christophe Henry", email = "contact@c-henry.fr" }
]

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Plugins",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.11",
]

requires-python = ">= 3.9"

dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "build",
    "setuptools",
    "twine",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/christophehenry/dj-importmap"
Documentation = "https://github.com/christophehenry/dj-importmap/blob/main/README.md"
Repository = "https://github.com/christophehenry/dj-importmap"
Issues = "https://github.com/christophehenry/dj-importmap/issues"
Changelog = "https://github.com/christophehenry/dj-importmap/blob/main/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "importmap.__version__" }

[tool.setuptools.packages.find]
include = ["importmap"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "first-party",
    "local-folder",
    "testing"
]
